// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildInspectValue should handle NaN 1`] = `
[
  "NaN",
  "text",
]
`;

exports[`buildInspectValue should handle array 1`] = `
[
  "[
  "foo",
  "bar",
  "baz"
]",
  "code",
]
`;

exports[`buildInspectValue should handle boolean 1`] = `
[
  "true",
  "text",
]
`;

exports[`buildInspectValue should handle geo 1`] = `
[
  "POINT(0 -0.0006656516255105771)",
  "code",
]
`;

exports[`buildInspectValue should handle geo w/ invalid format 1`] = `
[
  "6y4h9b",
  "text",
]
`;

exports[`buildInspectValue should handle geo w/out formatGeometry 1`] = `
[
  "{
  "disposed": false,
  "pendingRemovals_": null,
  "dispatching_": null,
  "listeners_": null,
  "revision_": 1,
  "ol_uid": "1",
  "values_": null,
  "extent_": [
    null,
    null,
    null,
    null
  ],
  "extentRevision_": -1,
  "simplifiedGeometryMaxMinSquaredTolerance": 0,
  "simplifiedGeometryRevision": 0,
  "layout": "XY",
  "stride": 2,
  "flatCoordinates": [
    0,
    -74.1
  ]
}",
  "code",
]
`;

exports[`buildInspectValue should handle null 1`] = `
[
  "",
  "text",
]
`;

exports[`buildInspectValue should handle null w/ JSON 1`] = `
[
  "null",
  "code",
]
`;

exports[`buildInspectValue should handle numbers 1`] = `
[
  "0",
  "text",
]
`;

exports[`buildInspectValue should handle object 1`] = `
[
  "{
  "foo": true,
  "b": "baz"
}",
  "code",
]
`;

exports[`buildInspectValue should handle sparkline (no x) 1`] = `
[
  "[
  2,
  4,
  6,
  8,
  10
]",
  "code",
]
`;

exports[`buildInspectValue should handle sparkline 1`] = `
[
  "[
  [0, 10],
  [1000, 20],
  [2000, 30]
]",
  "code",
]
`;

exports[`buildInspectValue should handle string 1`] = `
[
  "foo",
  "text",
]
`;

exports[`buildInspectValue should handle string w/ JSON (invalid JSON) 1`] = `
[
  ""{\\"invalid\\": \\"json"",
  "code",
]
`;

exports[`buildInspectValue should handle string w/ JSON 1`] = `
[
  "{
  "valid": "json"
}",
  "code",
]
`;

exports[`buildInspectValue should handle undefined 1`] = `
[
  "",
  "text",
]
`;
